--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -23,20 +23,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vw_executor.vw_opts import VwOpts, InteractiveGrid\n",
+    "from vw_executor.vw_opts import VwOpts\n",
     "from pathlib import Path\n",
-    "%matplotlib widget\n",
+    "\n",
     "import random\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "from itertools import chain\n",
     "import scipy\n",
     "import seaborn as sns\n",
-    "sns.set_theme(style=\"darkgrid\")\n",
+    "\n",
     "from vw_executor.vw import Vw\n",
     "from functools import reduce\n",
+    "\n",
+    "%matplotlib widget\n",
+    "sns.set_theme(style=\"darkgrid\")\n",
     "\n",
     "def new_ax():\n",
     "    _,ax = plt.subplots(dpi=100, figsize=[9,4])\n",
@@ -90,7 +91,7 @@
     "    layout = Layout(grid_template_rows=' '.join(['auto'] * rows), grid_template_columns=' '.join(['auto'] * columns))\n",
     "    return GridBox(children=elements, layout=layout)   \n",
     "    \n",
-    "class Playground:\n",
+    "class VwPlayground:\n",
     "    def __init__(self, simulation, visualization, vw_binary=None, cache_path = '.cache'):\n",
     "        self.data_folder = Path(cache_path).joinpath('datasets')\n",
     "        self.simulation = simulation\n",
@@ -264,20 +265,20 @@
    "source": [
     "from ipywidgets import *\n",
     "\n",
-    "playground = Playground(my_simulation, MyVisualization())\n",
+    "playground = VwPlayground(my_simulation, MyVisualization())\n",
     "playground.run(\n",
-    "    InteractiveGrid({\n",
+    "    {\n",
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
     "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1)\n",
-    "    }),\n",
-    "    InteractiveGrid({\n",
+    "    },\n",
+    "    {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
-    "    }),\n",
+    "    },\n",
     "    columns=3\n",
     ")"
    ]
@@ -288,7 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "playground.last_job"
+    "print('Last command line')\n",
+    "print(playground.last_job[0].args)"
    ]
   },
   {
