--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -159,16 +159,7 @@
     "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}},\n",
     "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}}]}},\n",
     "            \"p\": [0.5, 0.5] \n",
-    "        }\n",
-    "    \n",
-    "def visualize(examples, window=100, ax=None):\n",
-    "    colors = ['green', 'red']\n",
-    "    styles = ['-', '-.']\n",
-    "    ax = ax or new_ax()\n",
-    "    df = cb_df(examples)\n",
-    "    [df[(df['shared_good']==i) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
-    "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
-    "    ax.legend()      "
+    "        }"
    ]
   },
   {
@@ -184,6 +175,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def visualize_env(examples, window=100, ax=None):\n",
+    "    colors = ['green', 'red']\n",
+    "    styles = ['-', '-.']\n",
+    "    ax = ax or new_ax()\n",
+    "    df = cb_df(examples)\n",
+    "    [df[(df['shared_good']==i) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
+    "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
+    "    ax.legend()\n",
+    "    \n",
+    "def visualize_learning(examples, job, window=100, ax=None):\n",
+    "    colors = ['green', 'red']\n",
+    "    styles = ['-', '-.']\n",
+    "    ax = ax or new_ax()\n",
+    "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
+    "    [(df[(df['shared_good']==i)][str(j)].rolling(window=window).mean() + i * 0.02).plot(\n",
+    "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
+    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
+    "\n",
     "class MyVisualization:\n",
     "    def __init__(self, window=100):\n",
     "        fig, ax = plt.subplots(1, 2, figsize=(12,4))\n",
@@ -199,15 +208,10 @@
     "        self.ax[1].set_title('P(action|person)')\n",
     "        \n",
     "    def after_simulation(self, examples):\n",
-    "        visualize(examples, window=self.window, ax=self.ax[0]) \n",
+    "        visualize_env(examples, window=self.window, ax=self.ax[0]) \n",
     "        \n",
     "    def after_train(self, examples, job):\n",
-    "        colors = ['green', 'red']\n",
-    "        styles = ['-', '-.']\n",
-    "        df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
-    "        [(df[(df['shared_good']==i)][str(j)].rolling(window=self.window).mean() + i * 0.02).plot(\n",
-    "            ax=self.ax[1], color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
-    "        self.ax[1].legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
+    "        visualize_learning(examples, job, window=self.window, ax=self.ax[1])\n",
     "        self.fig.canvas.draw_idle()"
    ]
   },
@@ -236,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1), window=50)"
+    "visualize_env(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1), window=50)"
    ]
   },
   {
@@ -267,13 +271,13 @@
     "\n",
     "playground = VwPlayground(my_simulation, MyVisualization())\n",
     "playground.run(\n",
-    "    {\n",
+    "    simulator_grid = {\n",
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
     "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1)\n",
     "    },\n",
-    "    {\n",
+    "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
@@ -291,6 +295,15 @@
    "source": [
     "print('Last command line')\n",
     "print(playground.last_job[0].args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playground.last_job[0].stdout.raw"
    ]
   },
   {
