categorical feature for context

--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -154,7 +154,7 @@
     "            \"_label_Action\": chosen + 1,\n",
     "            \"_labelIndex\": chosen,\n",
     "            \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
-    "            \"c\": {'shared': {'f': person,\n",
+    "            \"c\": {'shared': {'f': str(person),\n",
     "                '_multi': [\n",
     "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}},\n",
     "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}}]}},\n",
@@ -180,7 +180,7 @@
     "    styles = ['-', '-.']\n",
     "    ax = ax or new_ax()\n",
     "    df = cb_df(examples)\n",
-    "    [df[(df['shared_good']==i) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
+    "    [df[(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
     "    ax.legend()\n",
     "    \n",
@@ -189,7 +189,7 @@
     "    styles = ['-', '-.']\n",
     "    ax = ax or new_ax()\n",
     "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
-    "    [(df[(df['shared_good']==i)][str(j)].rolling(window=window).mean() + i * 0.02).plot(\n",
+    "    [(df[(df['shared_good']==str(i))][str(j)].rolling(window=window).mean() + i * 0.02).plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
     "\n",
