plot titles cleanup

--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -176,18 +176,20 @@
    "outputs": [],
    "source": [
     "def visualize_env(examples, window=100, ax=None):\n",
+    "    ax = ax or new_ax()\n",
+    "    ax.set_title('Rewards')\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
-    "    ax = ax or new_ax()\n",
     "    df = cb_df(examples)\n",
     "    [df[(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
     "    ax.legend()\n",
     "    \n",
     "def visualize_learning(examples, job, window=100, ax=None):\n",
+    "    ax = ax or new_ax()\n",
+    "    ax.set_title('P(action|person)')\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
-    "    ax = ax or new_ax()\n",
     "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
     "    [(df[(df['shared_good']==str(i))][str(j)].rolling(window=window).mean() + i * 0.02).plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
@@ -203,9 +205,7 @@
     "        \n",
     "    def reset(self):\n",
     "        self.ax[0].clear()\n",
-    "        self.ax[0].set_title('Rewards')\n",
     "        self.ax[1].clear()\n",
-    "        self.ax[1].set_title('P(action|person)')\n",
     "        \n",
     "    def after_simulation(self, examples):\n",
     "        visualize_env(examples, window=self.window, ax=self.ax[0]) \n",
