visualization windows fix

--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -201,7 +201,7 @@
     "        self.fig = fig\n",
     "        self.ax = ax\n",
     "        self.vw_outputs = ['-p']\n",
-    "        self.window=100\n",
+    "        self.window=window\n",
     "        \n",
     "    def reset(self):\n",
     "        self.ax[0].clear()\n",
