simulator code hash

--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -54,7 +54,7 @@
     "            yield json.loads(l)\n",
     "\n",
     "def get_simulation(folder, simulator, **kwargs):\n",
-    "    path = Path(folder).joinpath(f'sim-{VwOpts(kwargs)}'.replace(' ', '-'))\n",
+    "    path = Path(folder).joinpath(f'{str(VwOpts(kwargs)).replace(\" \", \"-\")}.json')\n",
     "    if not path.exists():\n",
     "        Path(folder).mkdir(parents=True, exist_ok=True)\n",
     "        examples = list(simulator(**kwargs))\n",
@@ -93,7 +93,7 @@
     "    \n",
     "class VwPlayground:\n",
     "    def __init__(self, simulation, visualization, vw_binary=None, cache_path = '.cache'):\n",
-    "        self.data_folder = Path(cache_path).joinpath('datasets')\n",
+    "        self.data_folder = Path(cache_path).joinpath('datasets').joinpath(str(hash(simulation.__code__)))\n",
     "        self.simulation = simulation\n",
     "        self.examples = None\n",
     "        self.visualization = visualization\n",
@@ -282,6 +282,8 @@
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
+    "        '#interactions': ['', '-q sa', '-q ::'],\n",
+    "        '#exploration': ['--epsilon 0.1', '--squarecb', '--cover 5', '--synthcover']\n",
     "    },\n",
     "    columns=3\n",
     ")"
