--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "!python -m pip install ipympl\n",
-    "!python -m pip install seaborn"
+    "!python -m pip install seaborn\n",
+    "!python -m pip install vw_executor --upgrade"
    ]
   },
   {
@@ -26,9 +27,9 @@
     "from vw_executor.vw_opts import VwOpts\n",
     "from pathlib import Path\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import random\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import json\n",
     "import scipy\n",
     "import seaborn as sns\n",
@@ -109,6 +110,7 @@
     "            self.last_job = self.vw.train(\n",
     "                [examples_path], train_opts, self.visualization.vw_outputs)\n",
     "            self.visualization.after_train(examples, self.last_job)\n",
+    "\n",
     "        collapsed, separator = _collapse(simulator_grid, vw_grid)\n",
     "        widget = interactive(_run_and_plot, separator=fixed(separator), **collapsed)\n",
     "        simulator_controls = grid_layout(widget.children[:len(simulator_grid)], columns)\n",
@@ -275,7 +277,7 @@
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
-    "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1)\n",
+    "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0'),\n",
@@ -307,13 +309,6 @@
    "source": [
     "playground.last_job[0].stdout.raw"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
