playground: matplotlib -> seaborn

--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -177,14 +177,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import clear_output\n",
+    "import seaborn as sns\n",
+    "\n",
     "def visualize_env(examples, window=100, ax=None):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Rewards')\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    df = cb_df(examples)\n",
-    "    [df[(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window)['reward'].mean().plot(\n",
-    "        ax=ax, color = colors[j], style=styles[i], label=f'Person: {i}, chosen: {j}') for i in [0,1] for j in [0,1]]   \n",
+    "    for i in [0,1]:\n",
+    "        for j in [0,1]:\n",
+    "            d = df[['reward']][(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window).mean()\n",
+    "            sns.lineplot(x = d.index, y=d['reward'], label=f'Person: {i}, chosen: {j}', color = colors[j], linestyle = styles[i], ax=ax)\n",
     "    ax.legend()\n",
     "    \n",
     "def visualize_learning(examples, job, window=100, ax=None):\n",
@@ -193,8 +198,10 @@
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
-    "    [(df[(df['shared_good']==str(i))][str(j)].rolling(window=window).mean() + i * 0.02).plot(\n",
-    "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
+    "    for i in [0,1]:\n",
+    "        for j in [0,1]:\n",
+    "            d = df[(df['shared_good']==str(i))][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
+    "            sns.lineplot(x = d.index, y=d[str(j)], label=f'P(chosen={j} | Person={i})', color = colors[j], linestyle = styles[i], ax=ax)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
     "\n",
     "class MyVisualization:\n",
@@ -210,11 +217,11 @@
     "        self.ax[1].clear()\n",
     "        \n",
     "    def after_simulation(self, examples):\n",
-    "        visualize_env(examples, window=self.window, ax=self.ax[0]) \n",
+    "        visualize_env(examples, window=self.window, ax=self.ax[0])\n",
     "        \n",
     "    def after_train(self, examples, job):\n",
     "        visualize_learning(examples, job, window=self.window, ax=self.ax[1])\n",
-    "        self.fig.canvas.draw_idle()"
+    "        self.fig.canvas.draw_idle()        "
    ]
   },
   {
@@ -242,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize_env(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1), window=50)"
+    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1))"
    ]
   },
   {
@@ -251,7 +258,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1))"
+    "visualization = MyVisualization()\n",
+    "visualization.reset()\n",
+    "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad = 1)\n",
+    "visualization.after_simulation(examples)\n",
+    "job = Vw('.cache', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
+    "visualization.after_train(examples, job)"
    ]
   },
   {
@@ -330,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
