more generic dashboard

--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -119,7 +119,49 @@
     "        controls.set_title(0, 'Simulator args')\n",
     "        controls.set_title(1, 'Vw args')\n",
     "        output = widget.children[-1]\n",
-    "        display(VBox([controls, output]))"
+    "        display(VBox([controls, output]))\n",
+    "\n",
+    "        \n",
+    "class Dashboard:\n",
+    "    def __init__(self, required_outputs, visualizers, figsize = (12, 4)):\n",
+    "        def _is_train_visualizer(visualizer):\n",
+    "            import inspect\n",
+    "            return 'job' in set(inspect.signature(visualizer).parameters.keys())\n",
+    "        \n",
+    "        def _get_ax(ax, x, y, dim):\n",
+    "            return ax[x + y] if dim == 1 else ax[y][x]\n",
+    "        \n",
+    "        \n",
+    "        self.env_visualizers = []\n",
+    "        self.train_visualizers = []\n",
+    "        plots_over_y = len(visualizers)\n",
+    "        plots_over_x = max([len(row) for row in visualizers])\n",
+    "        dim = 1 if (plots_over_y == 1 or plots_over_x == 1) else 2\n",
+    "        _get = lambda ax, x, y: _get_ax(ax, x, y, dim)\n",
+    "        \n",
+    "        fig, ax = plt.subplots(plots_over_y, plots_over_x, figsize=figsize)\n",
+    "        \n",
+    "        for x in range(plots_over_x):\n",
+    "            for y in range(plots_over_y):\n",
+    "                v = visualizers[y][x]\n",
+    "                if _is_train_visualizer(v):\n",
+    "                    self.train_visualizers.append((_get(ax, x, y), v))\n",
+    "                else:\n",
+    "                    self.env_visualizers.append((_get(ax, x, y), v))\n",
+    "        \n",
+    "        self.fig = fig\n",
+    "        self.vw_outputs = required_outputs\n",
+    "\n",
+    "    def reset(self):\n",
+    "        [ax_v[0].clear() for ax_v in self.env_visualizers]\n",
+    "        [ax_v[0].clear() for ax_v in self.train_visualizers]\n",
+    "        \n",
+    "    def after_simulation(self, examples):\n",
+    "        [ax_v[1](examples, ax=ax_v[0]) for ax_v in self.env_visualizers]\n",
+    "        \n",
+    "    def after_train(self, examples, job):\n",
+    "        [ax_v[1](examples, job, ax=ax_v[0]) for ax_v in self.train_visualizers]\n",
+    "        self.fig.canvas.draw_idle()   "
    ]
   },
   {
@@ -178,9 +220,8 @@
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
-    "import seaborn as sns\n",
     "\n",
-    "def visualize_env(examples, window=100, ax=None):\n",
+    "def visualize_env(examples, ax=None, window=100):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Rewards')\n",
     "    colors = ['green', 'red']\n",
@@ -192,7 +233,7 @@
     "            sns.lineplot(x = d.index, y=d['reward'], label=f'Person: {i}, chosen: {j}', color = colors[j], linestyle = styles[i], ax=ax)\n",
     "    ax.legend()\n",
     "    \n",
-    "def visualize_learning(examples, job, window=100, ax=None):\n",
+    "def visualize_learning(examples, job, ax=None, window=100):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('P(action|person)')\n",
     "    colors = ['green', 'red']\n",
@@ -203,25 +244,7 @@
     "            d = df[(df['shared_good']==str(i))][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)], label=f'P(chosen={j} | Person={i})', color = colors[j], linestyle = styles[i], ax=ax)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
-    "\n",
-    "class MyVisualization:\n",
-    "    def __init__(self, window=100):\n",
-    "        fig, ax = plt.subplots(1, 2, figsize=(12,4))\n",
-    "        self.fig = fig\n",
-    "        self.ax = ax\n",
-    "        self.vw_outputs = ['-p']\n",
-    "        self.window=window\n",
-    "        \n",
-    "    def reset(self):\n",
-    "        self.ax[0].clear()\n",
-    "        self.ax[1].clear()\n",
-    "        \n",
-    "    def after_simulation(self, examples):\n",
-    "        visualize_env(examples, window=self.window, ax=self.ax[0])\n",
-    "        \n",
-    "    def after_train(self, examples, job):\n",
-    "        visualize_learning(examples, job, window=self.window, ax=self.ax[1])\n",
-    "        self.fig.canvas.draw_idle()        "
+    "     "
    ]
   },
   {
@@ -258,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization = MyVisualization()\n",
+    "visualization = Dashboard(['-p'], [[visualize_env, visualize_learning]])\n",
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad = 1)\n",
     "visualization.after_simulation(examples)\n",
@@ -283,7 +306,9 @@
    "source": [
     "from ipywidgets import *\n",
     "\n",
-    "playground = VwPlayground(my_simulation, MyVisualization())\n",
+    "dashboard = Dashboard(['-p'],\n",
+    "    [[visualize_env, visualize_learning]])\n",
+    "playground = VwPlayground(my_simulation, dashboard)\n",
     "playground.run(\n",
     "    simulator_grid = {\n",
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
@@ -321,6 +346,13 @@
    "source": [
     "playground.last_job[0].stdout.raw"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +360,7 @@
    "hash": "b8f4a58adc17b056f67bda23a8d2f1daa157665278cb2abc3190e1c7319c7b72"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
