--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -24,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import *\n",
     "from vw_executor.vw_opts import VwOpts\n",
     "from pathlib import Path\n",
     "\n",
@@ -90,8 +91,8 @@
     "def grid_layout(elements, columns=4):\n",
     "    rows = (len(elements) - 1) // columns + 1\n",
     "    layout = Layout(grid_template_rows=' '.join(['auto'] * rows), grid_template_columns=' '.join(['auto'] * columns))\n",
-    "    return GridBox(children=elements, layout=layout)   \n",
-    "    \n",
+    "    return GridBox(children=elements, layout=layout)\n",
+    "\n",
     "class VwPlayground:\n",
     "    def __init__(self, simulation, visualization, vw_binary=None, cache_path = '.cache'):\n",
     "        self.data_folder = Path(cache_path).joinpath('datasets').joinpath(str(hash(simulation.__code__)))\n",
@@ -120,7 +121,7 @@
     "        controls.set_title(1, 'Vw args')\n",
     "        output = widget.children[-1]\n",
     "        display(VBox([controls, output]))\n",
-    "\n",
+    "        \n",
     "        \n",
     "class Dashboard:\n",
     "    def __init__(self, required_outputs, visualizers, figsize = (12, 4)):\n",
@@ -130,26 +131,25 @@
     "        \n",
     "        def _get_ax(ax, x, y, dim):\n",
     "            return ax[x + y] if dim == 1 else ax[y][x]\n",
-    "        \n",
-    "        \n",
     "        self.env_visualizers = []\n",
     "        self.train_visualizers = []\n",
+    "        \n",
+    "        self.fig = plt.figure(figsize=figsize)\n",
     "        plots_over_y = len(visualizers)\n",
-    "        plots_over_x = max([len(row) for row in visualizers])\n",
-    "        dim = 1 if (plots_over_y == 1 or plots_over_x == 1) else 2\n",
-    "        _get = lambda ax, x, y: _get_ax(ax, x, y, dim)\n",
-    "        \n",
-    "        fig, ax = plt.subplots(plots_over_y, plots_over_x, figsize=figsize)\n",
-    "        \n",
-    "        for x in range(plots_over_x):\n",
-    "            for y in range(plots_over_y):\n",
-    "                v = visualizers[y][x]\n",
+    "        plots_over_x = max([len(row) for row in visualizers])  \n",
+    "        gs = gridspec.GridSpec(plots_over_y, 2 * plots_over_x)\n",
+    "        gs.update(wspace=0.5)\n",
+    "        for i in range(plots_over_y):\n",
+    "            cols = len(visualizers[i])\n",
+    "            offset = plots_over_x - cols\n",
+    "            for j in range(cols):\n",
+    "                v = visualizers[i][j]\n",
+    "                ax = plt.subplot(gs[i, j * 2 + offset: j * 2 + offset + 2], )\n",
     "                if _is_train_visualizer(v):\n",
-    "                    self.train_visualizers.append((_get(ax, x, y), v))\n",
+    "                    self.train_visualizers.append((ax, v))\n",
     "                else:\n",
-    "                    self.env_visualizers.append((_get(ax, x, y), v))\n",
+    "                    self.env_visualizers.append((ax, v))\n",
     "        \n",
-    "        self.fig = fig\n",
     "        self.vw_outputs = required_outputs\n",
     "\n",
     "    def reset(self):\n",
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visulization"
+    "# Visualizers"
    ]
   },
   {
@@ -219,9 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n",
-    "\n",
-    "def visualize_env(examples, ax=None, window=100):\n",
+    "def plot_env(examples, ax=None, window=100):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Rewards')\n",
     "    colors = ['green', 'red']\n",
@@ -232,8 +230,9 @@
     "            d = df[['reward']][(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'], label=f'Person: {i}, chosen: {j}', color = colors[j], linestyle = styles[i], ax=ax)\n",
     "    ax.legend()\n",
+    "\n",
     "    \n",
-    "def visualize_learning(examples, job, ax=None, window=100):\n",
+    "def plot_probs(examples, job, ax=None, window=100):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('P(action|person)')\n",
     "    colors = ['green', 'red']\n",
@@ -244,7 +243,14 @@
     "            d = df[(df['shared_good']==str(i))][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)], label=f'P(chosen={j} | Person={i})', color = colors[j], linestyle = styles[i], ax=ax)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
-    "     "
+    "     \n",
+    "        \n",
+    "def plot_reward(examples, job, ax=None, window=100):\n",
+    "    ax = ax or new_ax()\n",
+    "    ax.set_title('Average reward')\n",
+    "    df = job.loss_table\n",
+    "    sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward')\n",
+    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
    ]
   },
   {
@@ -281,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization = Dashboard(['-p'], [[visualize_env, visualize_learning]])\n",
+    "visualization = Dashboard(['-p'], [[plot_env, plot_probs]])\n",
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad = 1)\n",
     "visualization.after_simulation(examples)\n",
@@ -304,11 +310,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import *\n",
-    "\n",
     "dashboard = Dashboard(['-p'],\n",
-    "    [[visualize_env, visualize_learning]])\n",
+    "    [[plot_env, plot_probs],\n",
+    "     [plot_reward]], figsize=(12,8))\n",
+    "\n",
     "playground = VwPlayground(my_simulation, dashboard)\n",
+    "\n",
     "playground.run(\n",
     "    simulator_grid = {\n",
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
@@ -317,7 +324,7 @@
     "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
