playground infrastructure as module

--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -1,24 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hacks & helpers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m pip install ipympl\n",
-    "!python -m pip install seaborn\n",
-    "!python -m pip install vw_executor --upgrade"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -26,142 +8,24 @@
    "source": [
     "from ipywidgets import *\n",
     "from vw_executor.vw_opts import VwOpts\n",
-    "from pathlib import Path\n",
+    "from vw_executor.vw import Vw\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
     "import random\n",
     "import pandas as pd\n",
     "import json\n",
     "import scipy\n",
     "import seaborn as sns\n",
-    "\n",
-    "from vw_executor.vw import Vw\n",
-    "from functools import reduce\n",
+    "from playground.utils import cb_df, get_simulation\n",
+    "from playground.dashboard import Dashboard\n",
+    "from playground.vw_playground import VwPlayground\n",
     "\n",
     "%matplotlib widget\n",
     "sns.set_theme(style=\"darkgrid\")\n",
     "\n",
     "def new_ax():\n",
     "    _,ax = plt.subplots(dpi=100, figsize=[9,4])\n",
-    "    return ax    \n",
-    "\n",
-    "def save_examples(examples, path):     \n",
-    "    with open(path, 'w') as f:\n",
-    "        for ex in examples:\n",
-    "            f.write(f'{json.dumps(ex, separators=(\",\", \":\"))}\\n')\n",
-    "            \n",
-    "def load_examples(path):\n",
-    "    with open(path) as f:\n",
-    "        for l in f:\n",
-    "            yield json.loads(l)\n",
-    "\n",
-    "def get_simulation(folder, simulator, **kwargs):\n",
-    "    path = Path(folder).joinpath(f'{str(VwOpts(kwargs)).replace(\" \", \"-\")}.json')\n",
-    "    if not path.exists():\n",
-    "        Path(folder).mkdir(parents=True, exist_ok=True)\n",
-    "        examples = list(simulator(**kwargs))\n",
-    "        save_examples(examples, path)\n",
-    "    else:\n",
-    "        examples = list(load_examples(path))\n",
-    "    return examples, path\n",
-    "    \n",
-    "def cb_df(examples):\n",
-    "    return pd.DataFrame([{\n",
-    "        'reward': -e['_label_cost'],\n",
-    "        'shared_good': e['c']['shared']['f'],\n",
-    "        'chosen': e['_labelIndex'],\n",
-    "        'prob': e['_label_probability']\n",
-    "    } for e in examples])    \n",
-    "\n",
-    "def _collapse(*grids):\n",
-    "    from collections import OrderedDict\n",
-    "    result = reduce(lambda r, g: OrderedDict(r, **g), grids)\n",
-    "    separator = [len(g) for g in grids]\n",
-    "    return result, separator\n",
-    "\n",
-    "def _split(collapsed, separator):\n",
-    "    result = []\n",
-    "    last = 0\n",
-    "    items = list(collapsed.items())\n",
-    "    for c in separator:\n",
-    "        result.append(dict(items[last:last + c]))\n",
-    "        last = last + c\n",
-    "    return tuple(result)\n",
-    "\n",
-    "def grid_layout(elements, columns=4):\n",
-    "    rows = (len(elements) - 1) // columns + 1\n",
-    "    layout = Layout(grid_template_rows=' '.join(['auto'] * rows), grid_template_columns=' '.join(['auto'] * columns))\n",
-    "    return GridBox(children=elements, layout=layout)\n",
-    "\n",
-    "class VwPlayground:\n",
-    "    def __init__(self, simulation, visualization, vw_binary=None, cache_path = '.cache'):\n",
-    "        self.data_folder = Path(cache_path).joinpath('datasets').joinpath(str(hash(simulation.__code__)))\n",
-    "        self.simulation = simulation\n",
-    "        self.examples = None\n",
-    "        self.visualization = visualization\n",
-    "        self.last_job = None\n",
-    "        self.vw = Vw(cache_path, vw_binary, handlers=[])\n",
-    "        \n",
-    "    def run(self, simulator_grid, vw_grid, columns=4):\n",
-    "        def _run_and_plot(separator, **options):\n",
-    "            sim_opts, train_opts = _split(options, separator)\n",
-    "            self.visualization.reset()\n",
-    "            examples, examples_path = get_simulation(self.data_folder, self.simulation, **sim_opts)\n",
-    "            self.visualization.after_simulation(examples)\n",
-    "            self.last_job = self.vw.train(\n",
-    "                [examples_path], train_opts, self.visualization.vw_outputs)\n",
-    "            self.visualization.after_train(examples, self.last_job)\n",
-    "\n",
-    "        collapsed, separator = _collapse(simulator_grid, vw_grid)\n",
-    "        widget = interactive(_run_and_plot, separator=fixed(separator), **collapsed)\n",
-    "        simulator_controls = grid_layout(widget.children[:len(simulator_grid)], columns)\n",
-    "        vw_controls = grid_layout(widget.children[len(simulator_grid):len(simulator_grid)+len(vw_grid)], columns)\n",
-    "        controls = Accordion(children=[simulator_controls, vw_controls])\n",
-    "        controls.set_title(0, 'Simulator args')\n",
-    "        controls.set_title(1, 'Vw args')\n",
-    "        output = widget.children[-1]\n",
-    "        display(VBox([controls, output]))\n",
-    "        \n",
-    "        \n",
-    "class Dashboard:\n",
-    "    def __init__(self, required_outputs, visualizers, figsize = (12, 4)):\n",
-    "        def _is_train_visualizer(visualizer):\n",
-    "            import inspect\n",
-    "            return 'job' in set(inspect.signature(visualizer).parameters.keys())\n",
-    "        \n",
-    "        def _get_ax(ax, x, y, dim):\n",
-    "            return ax[x + y] if dim == 1 else ax[y][x]\n",
-    "        self.env_visualizers = []\n",
-    "        self.train_visualizers = []\n",
-    "        \n",
-    "        self.fig = plt.figure(figsize=figsize)\n",
-    "        plots_over_y = len(visualizers)\n",
-    "        plots_over_x = max([len(row) for row in visualizers])  \n",
-    "        gs = gridspec.GridSpec(plots_over_y, 2 * plots_over_x)\n",
-    "        gs.update(wspace=0.5)\n",
-    "        for i in range(plots_over_y):\n",
-    "            cols = len(visualizers[i])\n",
-    "            offset = plots_over_x - cols\n",
-    "            for j in range(cols):\n",
-    "                v = visualizers[i][j]\n",
-    "                ax = plt.subplot(gs[i, j * 2 + offset: j * 2 + offset + 2], )\n",
-    "                if _is_train_visualizer(v):\n",
-    "                    self.train_visualizers.append((ax, v))\n",
-    "                else:\n",
-    "                    self.env_visualizers.append((ax, v))\n",
-    "        \n",
-    "        self.vw_outputs = required_outputs\n",
-    "\n",
-    "    def reset(self):\n",
-    "        [ax_v[0].clear() for ax_v in self.env_visualizers]\n",
-    "        [ax_v[0].clear() for ax_v in self.train_visualizers]\n",
-    "        \n",
-    "    def after_simulation(self, examples):\n",
-    "        [ax_v[1](examples, ax=ax_v[0]) for ax_v in self.env_visualizers]\n",
-    "        \n",
-    "    def after_train(self, examples, job):\n",
-    "        [ax_v[1](examples, job, ax=ax_v[0]) for ax_v in self.train_visualizers]\n",
-    "        self.fig.canvas.draw_idle()   "
+    "    return ax"
    ]
   },
   {
@@ -310,9 +174,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard = Dashboard(['-p'],\n",
-    "    [[plot_env, plot_probs],\n",
-    "     [plot_reward]], figsize=(12,8))\n",
+    "layout = [\n",
+    "    [plot_env, plot_probs],\n",
+    "    [plot_reward]]\n",
+    "\n",
+    "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
     "\n",
     "playground = VwPlayground(my_simulation, dashboard)\n",
     "\n",
