--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipywidgets import *\n",
     "from vw_executor.vw_opts import VwOpts\n",
     "from vw_executor.vw import Vw\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from pathlib import Path\n",
     "import random\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
