--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -124,7 +124,7 @@
     "tags": []
    },
    "source": [
-    "# Look at the data"
+    "# Look at the data / Debug"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
