--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_simulation(n=10000, swap_after=5000, variance=0, bad=0):\n",
+    "def my_simulation(n=10000, swap_after=5000, variance=0, bad_features=0):\n",
     "    offset = 0\n",
     "    for i in range(1, n):\n",
     "        if i % swap_after == 0:\n",
@@ -65,8 +65,8 @@
     "            \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
     "            \"c\": {'shared': {'f': str(person),\n",
     "                '_multi': [\n",
-    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}},\n",
-    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad))}}]}},\n",
+    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}},\n",
+    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}}]}},\n",
     "            \"p\": [0.5, 0.5] \n",
     "        }"
    ]
@@ -114,7 +114,8 @@
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Average reward')\n",
     "    df = job.loss_table\n",
-    "    sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward')\n",
+    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward')\n",
+    "    p.set_ylabel(\"reward\")\n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
    ]
   },
@@ -188,7 +189,7 @@
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
-    "        'bad': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
+    "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
