--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad = 1)\n",
+    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad_features = 1)\n",
     "cb_df(examples).head()"
    ]
   },
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad = 1))"
+    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad_features = 1))"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "source": [
     "visualization = Dashboard(['-p'], [[plot_env, plot_probs]])\n",
     "visualization.reset()\n",
-    "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad = 1)\n",
+    "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
     "visualization.after_simulation(examples)\n",
     "job = Vw('.cache', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
     "visualization.after_train(examples, job)"
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
