--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -164,7 +164,7 @@
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
     "visualization.after_simulation(examples)\n",
-    "job = Vw('.cache', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
+    "job = Vw('.cache', 'vw', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
     "visualization.after_train(examples, job)"
    ]
   },
@@ -187,9 +187,9 @@
     "    [plot_env, plot_probs],\n",
     "    [plot_reward]]\n",
     "\n",
-    "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
+    "dashboard = Dashboard(['-p', '--extra_metrics'], layout, figsize=(12,8))\n",
     "\n",
-    "playground = VwPlayground(my_simulation, dashboard)\n",
+    "playground = VwPlayground(my_simulation, dashboard, vw_binary='vw')\n",
     "\n",
     "playground.run(\n",
     "    simulator_grid = {\n",
@@ -199,11 +199,17 @@
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 1000'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 10'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
-    "        '#interactions': ['', '-q sa', '-q ::'],\n",
+    "        '#interactions': \n",
+    "            [\n",
+    "                '',\n",
+    "                '-q sa',\n",
+    "                '-q :: --noconstant',\n",
+    "                '--noconstant --automl 4 --automl_alpha 0.03 --global_lease 2000 --oracle_type one_diff --priority_challengers 1 --verbose_metrics'\n",
+    "            ],\n",
     "        '#exploration': ['--epsilon 0.1', '--squarecb', '--cover 5', '--synthcover']\n",
     "    },\n",
     "    columns=3\n",
@@ -234,7 +240,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "json.load(open(playground.last_job[0].outputs['--extra_metrics']))"
+   ]
   }
  ],
  "metadata": {
@@ -256,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
